--- a/database/database_semantic/src/fx/fmxl/MovieInputScreen.fxml
+++ b/database/database_semantic/src/fx/fmxl/MovieInputScreen.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.control.TextField?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="sample.MovieInputController">
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.controllers.MovieController">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -16,16 +21,15 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <AnchorPane fx:id="search" prefHeight="480.0" prefWidth="880.0" stylesheets="@dark_theme.css">
+      <AnchorPane fx:id="search" prefHeight="480.0" prefWidth="880.0">
          <children>
             <TextField layoutX="562.0" layoutY="23.0" prefHeight="25.0" prefWidth="278.0" />
-            <ListView fx:id="movielist" layoutX="562.0" layoutY="62.0" prefHeight="378.0" prefWidth="278.0" />
-            <Text fx:id="selected" layoutX="645.0" layoutY="462.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 / 3 movies selected" />
+            <!--<Text fx:id="selected" layoutX="645.0" layoutY="462.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 / 3 movies selected" />-->
             <Button fx:id="next" layoutX="799.0" layoutY="445.0" mnemonicParsing="false" text="Next" />
             <Pane fx:id="movieinfo" layoutX="40.0" layoutY="62.0" prefHeight="378.0" prefWidth="462.0">
                <children>
                   <ImageView fx:id="cover" fitHeight="150.0" fitWidth="200.0" layoutX="31.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
-                  <Text fx:id="title" layoutX="241.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title: " />
+                 <!-- <Text fx:id="title" layoutX="241.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title: " />-->
                </children>
             </Pane>
             <Text layoutX="216.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Movie Selector" textAlignment="CENTER">
@@ -33,6 +37,11 @@
                   <Font name="Times New Roman" size="18.0" />
                </font>
             </Text>
+            <TableView fx:id="movielist" layoutX="562.0" layoutY="72.0" prefHeight="359.0" prefWidth="278.0">
+              <columns>
+                <TableColumn fx:id="tab_table" prefWidth="273.0" text="Movies" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
    </children>
