--- a/database/database_semantic/src/fx/fmxl/WelcomeScreen.fxml
+++ b/database/database_semantic/src/fx/fmxl/WelcomeScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" prefHeight="400.0" prefWidth="500.0" stylesheets="@dark_theme.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.WelcomeController">
+<GridPane alignment="center" hgap="10" prefHeight="400.0" prefWidth="500.0" stylesheets="@../themes/dark_theme.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.controllers.WelcomeController">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
