--- a/database/database_semantic/src/sample/WelcomeScreen.fxml
+++ b/database/database_semantic/src/sample/WelcomeScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" prefHeight="400.0" prefWidth="500.0" stylesheets="@../themes/dark_theme.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.controllers.WelcomeController">
+<GridPane alignment="center" hgap="10" prefHeight="400.0" prefWidth="500.0" stylesheets="@dark_theme.css" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.WelcomeController">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -25,7 +25,7 @@
          <GridPane.margin>
             <Insets top="20.0" />
          </GridPane.margin></Button>
-      <Label fx:id="labelWelcome" text="Welcome to: Movie Recommender System" GridPane.halignment="CENTER">
+      <Label fx:id="labelWelcome" text="Movie Recommender System" GridPane.halignment="CENTER">
          <GridPane.margin>
             <Insets bottom="30.0" />
          </GridPane.margin>
